{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 442,
  "lineage": "4b357fca-ee31-d5f4-e96b-308bdaa5b04f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ServerInsideVpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3950be11ebc3ae",
            "arn": "arn:aws:ec2:ap-south-1:328245990239:instance/i-08a26ff372b0b1510",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a26ff372b0b1510",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loginkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086cbabc93ab049f5",
            "private_dns": "ip-10-0-0-189.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.189",
            "public_ip": "43.205.115.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005ddb567ca751e42",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5571c7615a92dcb",
            "tags": {
              "Name": "ServerInsideVpc1"
            },
            "tags_all": {
              "Name": "ServerInsideVpc1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac19fba2fb3859a"
            ]
          },
          "dependencies": [
            "aws_key_pair.loginkey",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ServerInsideVpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3950be11ebc3ae",
            "arn": "arn:aws:ec2:ap-south-1:328245990239:instance/i-079d14fdd6efc8bae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079d14fdd6efc8bae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loginkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ee150334c2560f5",
            "private_dns": "ip-10-0-1-45.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_ip": "3.110.90.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054671d74132f0b90",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0554cd03dedf46911",
            "tags": {
              "Name": "ServerInsideVpc2"
            },
            "tags_all": {
              "Name": "ServerInsideVpc2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac19fba2fb3859a"
            ]
          },
          "dependencies": [
            "aws_key_pair.loginkey",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ServerInsideVpc3_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3950be11ebc3ae",
            "arn": "arn:aws:ec2:ap-south-1:328245990239:instance/i-0432539e0983c662a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0432539e0983c662a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loginkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fdbafc2b3451000e",
            "private_dns": "ip-10-0-4-63.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a42322da9ba2ada",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f590bbe26e04f376",
            "tags": {
              "Name": "ServerInsideVpc3_private"
            },
            "tags_all": {
              "Name": "ServerInsideVpc3_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac19fba2fb3859a"
            ]
          },
          "dependencies": [
            "aws_key_pair.loginkey",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1b_private",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "WebaapProjectIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:internet-gateway/igw-0e000ddfeb445c2a0",
            "id": "igw-0e000ddfeb445c2a0",
            "owner_id": "328245990239",
            "tags": {
              "Name": "WebaapProjectIG"
            },
            "tags_all": {
              "Name": "WebaapProjectIG"
            },
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "WebaapProjectLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLB/2bf46dc682fcb140",
            "arn_suffix": "app/WebaapProjectLB/2bf46dc682fcb140",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebaapProjectLB-535565343.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLB/2bf46dc682fcb140",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebaapProjectLB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ac19fba2fb3859a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0554cd03dedf46911"
              },
              {
                "subnet_id": "subnet-0d5571c7615a92dcb"
              }
            ],
            "subnets": [
              "subnet-0554cd03dedf46911",
              "subnet-0d5571c7615a92dcb"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e3c21dc94189fc1a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "WebaapProjectLBASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLBASG/f2d89f655a13450c",
            "arn_suffix": "app/WebaapProjectLBASG/f2d89f655a13450c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebaapProjectLBASG-540042762.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLBASG/f2d89f655a13450c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebaapProjectLBASG",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ac19fba2fb3859a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0554cd03dedf46911"
              },
              {
                "subnet_id": "subnet-0d5571c7615a92dcb"
              }
            ],
            "subnets": [
              "subnet-0554cd03dedf46911",
              "subnet-0d5571c7615a92dcb"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e3c21dc94189fc1a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "WebaapProjectLBListner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:listener/app/WebaapProjectLB/2bf46dc682fcb140/70509f64225c084b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:listener/app/WebaapProjectLB/2bf46dc682fcb140/70509f64225c084b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLB/2bf46dc682fcb140",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.WebaapProjectLB",
            "aws_lb_target_group.WebaapProjectLBTargetG",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "WebaapProjectLBListnerASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:listener/app/WebaapProjectLBASG/f2d89f655a13450c/eadcc294fb35bb88",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLBASG/64c8cbf764eb0ad5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:listener/app/WebaapProjectLBASG/f2d89f655a13450c/eadcc294fb35bb88",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLBASG/f2d89f655a13450c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.WebaapProjectLBASG",
            "aws_lb_target_group.WebaapProjectLBTargetGroupASG",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "WebaapProjectLBTargetG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
            "arn_suffix": "targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebaapProjectLB",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "WebaapProjectLBTargetGroupASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLBASG/64c8cbf764eb0ad5",
            "arn_suffix": "targetgroup/WebaapProjectLBASG/64c8cbf764eb0ad5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLBASG/64c8cbf764eb0ad5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebaapProjectLBASG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WebaapProjectLBattachement01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d-20230413070347312900000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
            "target_id": "i-08a26ff372b0b1510"
          },
          "dependencies": [
            "aws_instance.ServerInsideVpc1",
            "aws_key_pair.loginkey",
            "aws_lb_target_group.WebaapProjectLBTargetG",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WebaapProjectLBattachement02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d-20230413070337199200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
            "target_id": "i-079d14fdd6efc8bae"
          },
          "dependencies": [
            "aws_instance.ServerInsideVpc2",
            "aws_key_pair.loginkey",
            "aws_lb_target_group.WebaapProjectLBTargetG",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WebaapProjectLBattachement03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d-20230413085012083200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLB/3e60ee73e65a1a8d",
            "target_id": "i-0432539e0983c662a"
          },
          "dependencies": [
            "aws_instance.ServerInsideVpc3_private",
            "aws_key_pair.loginkey",
            "aws_lb_target_group.WebaapProjectLBTargetG",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1b_private",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WebaapProjectRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:route-table/rtb-0d16d32af6ba7aeea",
            "id": "rtb-0d16d32af6ba7aeea",
            "owner_id": "328245990239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e000ddfeb445c2a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebaapProjectRT"
            },
            "tags_all": {
              "Name": "WebaapProjectRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.WebaapProjectIG",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WebaapProjectRT_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:route-table/rtb-0ff5fafac6b21ed2b",
            "id": "rtb-0ff5fafac6b21ed2b",
            "owner_id": "328245990239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b38cfdc83786af61",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebaapProjectRT_Private"
            },
            "tags_all": {
              "Name": "WebaapProjectRT_Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebaapProjectRTAsso1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01af3e63baa09cc8b",
            "route_table_id": "rtb-0d16d32af6ba7aeea",
            "subnet_id": "subnet-0d5571c7615a92dcb"
          },
          "dependencies": [
            "aws_internet_gateway.WebaapProjectIG",
            "aws_route_table.WebaapProjectRT",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebaapProjectRTAsso1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f872025f5303a18",
            "route_table_id": "rtb-0d16d32af6ba7aeea",
            "subnet_id": "subnet-0554cd03dedf46911"
          },
          "dependencies": [
            "aws_internet_gateway.WebaapProjectIG",
            "aws_route_table.WebaapProjectRT",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebaapProjectRTAsso1b_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0467fa094ce1bfc7a",
            "route_table_id": "rtb-0ff5fafac6b21ed2b",
            "subnet_id": "subnet-0f590bbe26e04f376"
          },
          "dependencies": [
            "aws_route_table.WebaapProjectRT_Private",
            "aws_subnet.WebbappProject_ap-south-1b_private",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebaapProjectSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:security-group/sg-00ac19fba2fb3859a",
            "description": "Allow SS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac19fba2fb3859a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "328245990239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebaapProjectSG"
            },
            "tags_all": {
              "Name": "WebaapProjectSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebbappProject_ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:subnet/subnet-0d5571c7615a92dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5571c7615a92dcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328245990239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WebbappProject_ap-1a"
            },
            "tags_all": {
              "Name": "WebbappProject_ap-1a"
            },
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebbappProject_ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:subnet/subnet-0554cd03dedf46911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0554cd03dedf46911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328245990239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WebbappProject_ap-1b"
            },
            "tags_all": {
              "Name": "WebbappProject_ap-1b"
            },
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebbappProject_ap-south-1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:subnet/subnet-0f590bbe26e04f376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f590bbe26e04f376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328245990239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WebbappProject_ap-1b_private"
            },
            "tags_all": {
              "Name": "WebbappProject_ap-1b_private"
            },
            "vpc_id": "vpc-0e3c21dc94189fc1a"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WebaapProjectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:vpc/vpc-0e3c21dc94189fc1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5a6652c50536f8e",
            "default_route_table_id": "rtb-0f188f34d7a8ecbcb",
            "default_security_group_id": "sg-013057b4a73bdaf38",
            "dhcp_options_id": "dopt-00e6486a36d6a48de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3c21dc94189fc1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f188f34d7a8ecbcb",
            "owner_id": "328245990239",
            "tags": {
              "Name": "WebaapProjectVPC"
            },
            "tags_all": {
              "Name": "WebaapProjectVPC"
            }
          }
        }
      ]
    }
  ]
}